--- a/src/main/resources/static/news_add.html
+++ b/src/main/resources/static/news_add.html
@@ -4,8 +4,8 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <link type="text/css" rel="stylesheet" href="../css/style.css" />
-    <link type="text/css" rel="stylesheet" href="../css/antd.css">
+    <link type="text/css" rel="stylesheet" href="css/style.css" />
+    <link type="text/css" rel="stylesheet" href="css/antd.css">
     <link rel="stylesheet" href="css/element.css">
     <!-- 引入组件库 -->
     <!--[if IE 6]>
@@ -15,19 +15,19 @@
     </script>
     <![endif]-->
 
-    <script type="text/javascript" src="../js/jquery-1.8.2.min.js"></script>
-    <script type="text/javascript" src="../js/menu.js"></script>
+    <script type="text/javascript" src="js/jquery-1.8.2.min.js"></script>
+    <script type="text/javascript" src="js/menu.js"></script>
 
-    <script type="text/javascript" src="../js/select.js"></script>
-    <script src="../js/vue.js"></script>
-    <script src="../js/axios.js"></script>
-    <script src="../js/antd.js"></script>
-    <script src="../js/element.js"></script>
+    <script type="text/javascript" src="js/select.js"></script>
+    <script src="js/vue.js"></script>
+    <script src="js/axios.js"></script>
+    <script src="js/antd.js"></script>
+    <script src="js/element.js"></script>
     <title>尤洪</title>
 </head>
 
 <body>
-<div id="app9">
+<div id="app8">
     <div class="soubg">
         <div class="sou">
             <!--Begin 所在收货地区 Begin-->
@@ -150,13 +150,13 @@
             </span>
             <span class="fl">|&nbsp;关注我们：</span>
             <span class="s_sh"><a href="#" class="sh1">新浪</a><a href="#" class="sh2">微信</a></span>
-            <span class="fr">|&nbsp;<a href="#">手机版&nbsp;<img src="../images/s_tel.png" align="absmiddle" /></a></span>
+            <span class="fr">|&nbsp;<a href="#">手机版&nbsp;<img src="images/s_tel.png" align="absmiddle" /></a></span>
         </span>
         </div>
     </div>
     <div class="m_top_bg">
         <div class="top">
-            <div class="m_logo"><a href="../index.html"><img src="../images/logo1.png" /></a></div>
+            <div class="m_logo"><a href="index.html"><img src="images/logo1.png" /></a></div>
 
             <div class="i_car">
                 <div class="car_t">购物车 [ <span>{{productLength}}</span> ]</div>
@@ -227,7 +227,7 @@
             </div>
             <div class="m_right">
                 <p></p>
-                <div class="mem_tit">新闻管理</div>
+                <div class="mem_tit">商品管理</div>
                 <a-row type="flex" justify="center">
                     <a-col :span="12">
                         <a-form-model
@@ -250,7 +250,7 @@
 
 
                             <a-form-model-item >
-                                <a-button type="primary" @click="onSubmit('productsForm')">修改</a-button>
+                                <a-button type="primary" @click="onSubmit('productsForm')">添加</a-button>
                                 <a-button style="margin-left: 10px" @click="resetForm('productsForm')">重置</a-button>
                                 <a href="javascript:history.back();"><a-button type="primary">返回</a-button></a>
                             </a-form-model-item>
@@ -267,25 +267,25 @@
             <div class="b_btm">
                 <table border="0" style="width:210px; height:62px; float:left; margin-left:75px; margin-top:30px;" cellspacing="0" cellpadding="0">
                     <tr>
-                        <td width="72"><img src="../images/b1.png" width="62" height="62" /></td>
+                        <td width="72"><img src="images/b1.png" width="62" height="62" /></td>
                         <td><h2>正品保障</h2>正品行货  放心购买</td>
                     </tr>
                 </table>
                 <table border="0" style="width:210px; height:62px; float:left; margin-left:75px; margin-top:30px;" cellspacing="0" cellpadding="0">
                     <tr>
-                        <td width="72"><img src="../images/b2.png" width="62" height="62" /></td>
+                        <td width="72"><img src="images/b2.png" width="62" height="62" /></td>
                         <td><h2>满38包邮</h2>满38包邮 免运费</td>
                     </tr>
                 </table>
                 <table border="0" style="width:210px; height:62px; float:left; margin-left:75px; margin-top:30px;" cellspacing="0" cellpadding="0">
                     <tr>
-                        <td width="72"><img src="../images/b3.png" width="62" height="62" /></td>
+                        <td width="72"><img src="images/b3.png" width="62" height="62" /></td>
                         <td><h2>天天低价</h2>天天低价 畅选无忧</td>
                     </tr>
                 </table>
                 <table border="0" style="width:210px; height:62px; float:left; margin-left:75px; margin-top:30px;" cellspacing="0" cellpadding="0">
                     <tr>
-                        <td width="72"><img src="../images/b4.png" width="62" height="62" /></td>
+                        <td width="72"><img src="images/b4.png" width="62" height="62" /></td>
                         <td><h2>准时送达</h2>收货时间由你做主</td>
                     </tr>
                 </table>
@@ -333,46 +333,41 @@
                 </p>
             </div>
             <div class="b_er">
-                <div class="b_er_c"><img src="../images/er.gif" width="118" height="118" /></div>
-                <img src="../images/ss.png" />
+                <div class="b_er_c"><img src="images/er.gif" width="118" height="118" /></div>
+                <img src="images/ss.png" />
             </div>
         </div>
         <div class="btmbg">
             <div class="btm">
                 备案/许可证编号：蜀ICP备12009302号-1-www.dingguagua.com   Copyright © 2015-2018 尤洪商城网 All Rights Reserved. 复制必究 , Technical Support: Dgg Group <br />
-                <img src="../images/b_1.gif" width="98" height="33" /><img src="../images/b_2.gif" width="98" height="33" /><img src="../images/b_3.gif" width="98" height="33" /><img src="../images/b_4.gif" width="98" height="33" /><img src="../images/b_5.gif" width="98" height="33" /><img src="../images/b_6.gif" width="98" height="33" />
+                <img src="images/b_1.gif" width="98" height="33" /><img src="images/b_2.gif" width="98" height="33" /><img src="images/b_3.gif" width="98" height="33" /><img src="images/b_4.gif" width="98" height="33" /><img src="images/b_5.gif" width="98" height="33" /><img src="images/b_6.gif" width="98" height="33" />
             </div>
         </div>
     </div>
 </div>
 </body>
+<script type="text/javascript" src="js/request.js"></script>
 <script type="text/javascript">
     new Vue({
-        el: '#app9',
+        el: '#app8',
 
         data() {
             let checkNewsTitle=(rule, value, callback) =>{
-                const urlParams = new URLSearchParams(window.location.search);
-                const id = urlParams.get('id')
-                this.news.id=id
                 axios
                     .get("/getNewsByTitle",{params:{title:value}})
                     .then((resp) => {
-                        console.log(resp.data)
                         if (!value) {
                             callback(new Error("请输入标题"));
                         }else if (value.length<1||value.length>20){
                             callback(new Error("标题长度错误"));
                         } else if (resp.data.code !== 200) {
-                            // 将resp.data.data.id转换为整数类型
-
                             callback(new Error("标题已经存在"));
                         }else {
                             callback()
                         }
                     })
                     .catch((error) => {
-                        console.error("修改失败", error);
+                        console.error("添加失败", error);
                     });
             }
             return{
@@ -384,7 +379,6 @@
                     id:null,
                 },
                 news: {
-                    id:null,
                     title:"",
                     content:"",
                     shortTitle:"",
@@ -437,29 +431,13 @@
 
                     });
             },
-            initNews() {
-                const urlParams = new URLSearchParams(window.location.search);
-                const id = urlParams.get('id');
-                axios.get('http://localhost:8080/getNewsById', {params: {id: id}})
-                    .then((resp) => {
-                        console.log(resp.data);
-                        this.news.title=resp.data.data.title
-                        this.news.content=resp.data.data.content
-                        this.news.shortTitle=resp.data.data.shortTitle
-
-                    });
-            },
-
 
 
             onSubmit(formName) {
-                const urlParams = new URLSearchParams(window.location.search);
-                const id = urlParams.get('id');
-                this.news.id = id;
                 this.$refs[formName].validate((valid) => {
                     if (valid) {
                         axios
-                            .post("/updateNews", this.news)
+                            .post("/addNews", this.news)
                             .then((resp) => {
                                 if (resp.data.code === 200) {
                                     window.location.href="news.html"
@@ -479,12 +457,19 @@
             resetForm(formName) {
                 this.$refs[formName].resetFields();
             },
+            checkRoled() {
+                let token=localStorage.getItem("token");
+                axios.get('http://localhost:8080/checkRoled', {params: {token: token}})
+                    .then((resp) => {
+
+                    });
+            },
 
         },
         mounted() {
+            this.checkRoled()
             this.initLogin()
             this.initCat()
-            this.initNews()
         }
     })
 </script>
