--- a/src/main/resources/static/BuyCar_Three.html
+++ b/src/main/resources/static/BuyCar_Three.html
@@ -363,6 +363,7 @@
 
 </body>
 
+<script src="js/request.js" type="text/javascript"></script>
 
 <script type="text/javascript">
 
@@ -387,7 +388,7 @@
             firstLoad() {
                 axios.get('http://localhost:8080/getFirstCategory')
                     .then((resp) => {
-                        this.theFirst = resp.data.data;
+                        this.theFirst = resp.data;
                     });
             },
             loadSecondAndThird(id) {
@@ -400,7 +401,7 @@
                     }
                 })
                     .then((resp) => {
-                        this.theSecond = resp.data.data;
+                        this.theSecond = resp.data;
                         if (this.theSecond.length > 0) {
                             this.thirdLoad(this.theSecond[0].id);
                         }
@@ -413,7 +414,7 @@
                     }
                 })
                     .then((resp) => {
-                        this.theThird = resp.data.data;
+                        this.theThird = resp.data;
                     });
             },
             initLogin() {
@@ -425,9 +426,9 @@
                 })
                     .then((resp) => {
                         console.log(resp.data)
-                        this.getUser=resp.data.data
-                        this.user.username = resp.data.data.userName
-                        this.user.id = resp.data.data.id
+                        this.getUser=resp.data
+                        this.user.username = resp.data.userName
+                        this.user.id = resp.data.id
 
                     });
             },
@@ -459,11 +460,19 @@
                 } catch (error) {
                     console.error(error);
                 }
-            }
+            },
+            checkRoled() {
+                let token=localStorage.getItem("token");
+                axios.get('http://localhost:8080/checkRoled', {params: {token: token}})
+                    .then((resp) => {
+
+                    });
+            },
 
 
         },
         mounted() {
+            this.checkRoled()
             const queryString = window.location.search;
             const urlParams = new URLSearchParams(queryString);
             this.serialNumber = urlParams.get('serialNumber');
@@ -472,5 +481,5 @@
             this.initLogin()
         }
     })
-</script>-
+</script>
 </html>
